force-app/main/default/objects/GL_Account__c/GL_Account__c.object-meta.xml
<CustomObject>
    <label>GL Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>