force-app/main/default/objects/GL_Account__c/fields/Account_SubType__c.field-meta.xml
<CustomField>
    <fullName>Account_SubType__c</fullName>
    <label>Account SubType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>