force-app/main/default/objects/GL_Account__c/fields/Is_Available_For_QB_Sync__c.field-meta.xml
<CustomField>
    <fullName>Is_Available_For_QB_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Available For QB Sync</label>
    <type>Checkbox</type>
</CustomField>