force-app/main/default/objects/GL_Account__c/fields/QB_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>QB_Error_Message__c</fullName>
    <label>QB Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>