force-app/main/default/objects/GL_Account__c/fields/QB_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>QB_Sync_Status__c</fullName>
    <label>QB Sync Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>