force-app/main/default/objects/GL_Account__c/fields/QBO_SyncToken__c.field-meta.xml
<CustomField>
    <fullName>QBO_SyncToken__c</fullName>
    <label>QBO SyncToken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>